[workspace]
members = [
  "core",
  "modules/test",
	"modules/http-client",
]
default-members = [ "core" ]

[patch.crates-io]
capnp = { path = "../capnproto-rust/capnp" }
capnp-rpc = { path = "../capnproto-rust/capnp-rpc" }
capnp-futures = { path = "../capnproto-rust/capnp-futures" }
capnpc = { path = "../capnproto-rust/capnpc" }
